# ray-app

./: .gitignore  README.md  main.py  pyproject.toml
dev-ops/: ray-cluster.yaml
dev-ops/my-cluster/: Dockerfile  docker-compose.yml  run.sh
